# Wordle-Solves

./: README.md  pyproject.toml
src/solver/: __main__.py
src/solver/game/: __init__.py  engine.py  feedback.py  result.py  state.py
src/solver/game/chooser/: base.py
src/solver/game/chooser/impl/: __init__.py  random_uniform.py
src/solver/logging/: format.py  logger.py
src/solver/oracle/: base.py
src/solver/oracle/impl/: random_uniform.py
src/solver/settings/: __init__.py  game.py  logging.py  path.py  root.py
src/solver/statistics/: aggregator.py  benchmark.py  export.py  models.py  visualizer.py
src/solver/strategy/: base.py
src/solver/strategy/impl/: random_consistent.py  random_uniform.py
src/solver/utility/: cache.py
src/solver/utility/io/: cache.py  load_data.py
