[project]
name = "wordle-solves"
version = "0.1.0"
description = "A repository containing a bunch of ways of solving the popular game Wordle."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
